set the path structure

--- a/certifications.html
+++ b/certifications.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Certifications</title>
     
-    <link rel="stylesheet" href="../pages/css/global.css">
-    <link rel="stylesheet" href="../pages/css/certifications.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/certifications.css">
     <link rel="stylesheet" href="css/footer.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script defer src="../js/certifications.js"></script>
     
 
-    <link rel="stylesheet" href="pages/css/contact.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
@@ -40,28 +40,28 @@
 
             <!-- Badge-Style Certificates -->
             <div class="cert-card">
-                <img src="../pages/assets/icons/dl.png" alt="Neural Networks">
+                <img src="/assets/icons/dl.png" alt="Neural Networks">
                 <h3>Neural Networks & Deep Learning</h3>
                 <p>DeepLearning.AI | Coursera</p>
                 <a href="https://coursera.org/verify/YW1TNEHNOS9" target="_blank" class="verify-btn">Verify</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/edx.jpeg" alt="Java Programming Part 1">
+                <img src="/assets/icons/edx.jpeg" alt="Java Programming Part 1">
                 <h3>Introduction to Java (Part 1)</h3>
                 <p>HKUSTx | edX | Issued: July 17, 2017</p>
                 <a href="https://courses.edx.org/certificates/170ffeb2f52144f6a90aad579915da58" target="_blank" class="verify-btn">Verify</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/edx.jpeg" alt="Java Programming Part 2">
+                <img src="/assets/icons/edx.jpeg" alt="Java Programming Part 2">
                 <h3>Introduction to Java (Part 2)</h3>
                 <p>HKUSTx | edX | Issued: Oct 14, 2017</p>
                 <a href="https://courses.edx.org/certificates/a61eafacc440452e98fa9ea766a5f751" target="_blank" class="verify-btn">Verify</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/aicamp.png" alt="Building Gen AI Applications">
+                <img src="/assets/icons/aicamp.png" alt="Building Gen AI Applications">
                 <h3>Building Gen AI Applications</h3>
                 <p>AI Camp | Issued: Sep 11, 2024</p>
                 <!--<a href="..pages/certificates/weviate.pdf" target="_blank" class="verify-btn">Verify</a> -->
@@ -70,35 +70,35 @@
 
             <!-- PDF Certificates -->
             <div class="cert-card">
-                <img src="../pages/assets/icons/aicra.jpeg" alt="PDF Certificate">
+                <img src="/assets/icons/aicra.jpeg" alt="PDF Certificate">
                 <h3>AI Internship in Robotics</h3>
                 <p>AICRA | Issued: May 11, 2019</p>
-                <a href="../pages/certificates/aiaicra.pdf" target="_blank" class="verify-btn">View PDF</a>
+                <a href="/certificates/aiaicra.pdf" target="_blank" class="verify-btn">View PDF</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/aicra.jpeg" alt="PDF Certificate">
+                <img src="/assets/icons/aicra.jpeg" alt="PDF Certificate">
                 <h3>Data Science Internship</h3>
                 <p>AICRA | Issued: May 11, 2019</p>
-                <a href="../pages/certificates/datascaicra.pdf" target="_blank" class="verify-btn">View PDF</a>
+                <a href="/certificates/datascaicra.pdf" target="_blank" class="verify-btn">View PDF</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/upgrad.png" alt="PDF Certificate">
+                <img src="/assets/icons/upgrad.png" alt="PDF Certificate">
                 <h3>Career Planning Fundamentals</h3>
                 <p>UpGrad | Issued: Oct 17, 2022</p>
-                <a href="../pages/certificates/careersplanning.pdf" target="_blank" class="verify-btn">View PDF</a>
+                <a href="/certificates/careersplanning.pdf" target="_blank" class="verify-btn">View PDF</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/gladwev.jpeg" alt="PDF Certificate">
+                <img src="/assets/icons/gladwev.jpeg" alt="PDF Certificate">
                 <h3>Industrial Training Internship</h3>
                 <p>Gladwev Software | Issued: July 31, 2017</p>
-                <a href="../pages/certificates/Gladwev Internship.pdf" target="_blank" class="verify-btn">View PDF</a>
+                <a href="/certificates/Gladwev Internship.pdf" target="_blank" class="verify-btn">View PDF</a>
             </div>
 
             <div class="cert-card">
-                <img src="../pages/assets/icons/dl.png" alt="PDF Certificate">
+                <img src="/assets/icons/dl.png" alt="PDF Certificate">
                 <h3>Chatgpt Prompt Engineering for Developers</h3>
                 <p>DeepLearning.AI | Issued: Feb 2025</p>
                 <a href="https://learn.deeplearning.ai/accomplishments/98f76dcd-d407-4994-99b6-c70a9755cbaf" target="_blank" class="verify-btn">Verify</a>
