--- a/education.html
+++ b/education.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/education.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/education.css">
     <link rel="stylesheet" href="css/footer.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script defer src="/js/education.js"></script>
+    <script defer src="js/education.js"></script>
 
 </head>
 <main>
@@ -39,7 +39,7 @@
                 <!-- Yeshiva University -->
 
                 <div class="edu-card fade-in">
-                    <img src="/assets/icons/yeshiva.jpeg" alt="Yeshiva University Logo" class="edu-logo">
+                    <img src="assets/icons/yeshiva.jpeg" alt="Yeshiva University Logo" class="edu-logo">
                     <h3>Master of Science, Artificial Intelligence</h3>
                     <p class="edu-institute">Katz School of Science and Health, Yeshiva University</p>
                     <span class="edu-year">Aug 2023 - Dec 2024 | <b>GPA:</b> 3.7</span>
@@ -54,7 +54,7 @@
     
                 <!-- IIIT -->
                 <div class="edu-card fade-in">
-                    <img src="/assets/icons/iiiit.png" alt="IIIT Logo" class="edu-logo">
+                    <img src="assets/icons/iiiit.png" alt="IIIT Logo" class="edu-logo">
                     <h3>Diploma in Data Science</h3>
                     <p class="edu-institute">International Institute of Information Technology Bangalore, Bangalore</p>
                     <span class="edu-year">Oct 2022 - Jun 2023</span>
@@ -72,7 +72,7 @@
     
                 <!-- KIIT -->
                 <div class="edu-card fade-in">
-                    <img src="/assets/icons/mdu.jpeg" alt="KIIT Logo" class="edu-logo">
+                    <img src="assets/icons/mdu.jpeg" alt="KIIT Logo" class="edu-logo">
                     <h3>B.Tech, Computer Science and Engineering</h3>
                     <p class="edu-institute">KIIT College of Engineering</p>
                     <span class="edu-year">Aug 2015 - Aug 2019 | <b>CGPA:</b> 7.8</span>
