--- a/experience.html
+++ b/experience.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/experience.css">
-    <link rel="stylesheet" href="'css/contact.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/experience.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script defer src="/js/experience.js"></script>
+    <script defer src="js/experience.js"></script>
 
     
 </head>
@@ -39,7 +39,7 @@
                 <div class="experience-card">
                     <div class="card-inner">
                         <div class="card-front">
-                            <img src="/assets/icons/zs.png" alt="ZS Analytics" class="company-logo">
+                            <img src="assets/icons/zs.png" alt="ZS Analytics" class="company-logo">
                             <h3>Machine Learning Engineer Intern</h3>
                             <p><strong>ZS Analytics LLP</strong> | Mar 2024 - Jul 2024 | Hybrid</p>
                         </div>
@@ -60,7 +60,7 @@
                 <div class="experience-card">
                     <div class="card-inner">
                         <div class="card-front">
-                            <img src="/assets/icons/aitouch.jpeg" alt="AiTouch" class="company-logo">
+                            <img src="assets/icons/aitouch.jpeg" alt="AiTouch" class="company-logo">
                             <h3>Data Engineer</h3>
                             <p><strong>AiTouch LLP</strong> | Oct 2019 - Aug 2023 | Hybrid</p>
                         </div>
@@ -80,7 +80,7 @@
                 <div class="experience-card">
                     <div class="card-inner">
                         <div class="card-front">
-                            <img src="/assets/icons/vanisb.png" alt="Vanisb Tech" class="company-logo">
+                            <img src="assets/icons/vanisb.png" alt="Vanisb Tech" class="company-logo">
                             <h3>Python Developer with AI</h3>
                             <p><strong>Vanisb Technology</strong> | Jul 2019 - Sep 2019 | New Delhi</p>
                         </div>
@@ -100,7 +100,7 @@
                 <div class="experience-card">
                     <div class="card-inner">
                         <div class="card-front">
-                            <img src="/assets/icons/aicra.jpeg" alt="AICRA" class="company-logo">
+                            <img src="assets/icons/aicra.jpeg" alt="AICRA" class="company-logo">
                             <h3>Data Science Intern</h3>
                             <p><strong>All India Council of Robotics & Automation (AICRA)</strong> | Jan 2019 - Jun 2019 | On-Site</p>
                         </div>
