--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/projects.css">
-    <link rel="stylesheet" href="'css/contact.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script defer src="js/projects.js"></script>
