--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
     
             <div class="hero-content">
-                <img src="assets/images/deepa.png" alt="Profile Picture" class="profile-img">
+                <img src="assets/images/deepa.jpg" alt="Profile Picture" class="profile-img">
                 <h1 class="hero-title">Welcome to My Portfolio</h1>
                 <p class="tagline"><i>Crafting Intelligent Solutions—Bridging AI and Reality.</i>
                 </p>
