update mobile responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         <header>
             <div class="logo">
                 <img src="assets/icons/logo.jpg" alt="DM Logo" class="logo-img">
+
             </div>
+            <div class="hamburger" id="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
